<resources>
    <string name="app_name">IDoodle</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_startGame">Start Game</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Username_to_Email"> %1$s@doodle.com </string>

    <!-- Strings related to the Lobby -->
    <string name="RoundNumber">Round: %1$d</string>
    <string name="UserNumber">Users: %1$d</string>

    <!-- Strings related to the inGame -->
    <string name="userInfo">%1$s,%2$d</string>
    <string name="username">Username</string>
    <string name="round">Round: %1$d</string>
    <string name="loading">Loading</string>
    <string name="countdown">%1$dsecs</string>
    <string name="countdownIntermission">Next round in %1$dsecs..</string>

    <!-- Strings related to inGame Messaging -->
    <string name="msgSender">%1$s:  %2$s</string>
    <string name="roundplaceholder">Round:</string>
    <string name="usersplaceholder">Users:</string>
    <string name="games_name_placeholder">Games Name</string>
    <string name="games_played">Games Played</string>
    <string name="total_points">Total Points</string>
    <string name="gamesplayedPlaceholdernumber">0</string>
    <string name="totalpointsplaceholdernumber">0</string>
    <string name="username_goes_here">Username goes here</string>
    <string name="guess">Guess</string>
    <string name="start_game">Start Game</string>
    <string name="waiting_for_host">Waiting for Host</string>
    <string name="new_game">New Game</string>
</resources>
