<?xml version="1.0" encoding="utf-8"?>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_centerInParent="true"
                android:text="@string/games_name_placeholder"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="15sp"
                android:textColor="#FFF"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/roundplaceholder" />

            <TextView
                android:id="@+id/tvUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#FFF"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/usersplaceholder"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
